--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
 	"author": "sirreal",
 	"license": "GPL-2.0",
 	"devDependencies": {
+		"@biomejs/biome": "1.7.3",
+		"@tsconfig/strictest": "^2.0.5",
+		"@typescript/lib-dom": "npm:@types/web@^0.0.147",
 		"@wordpress/api-fetch": "^6.55.0",
-		"@wordpress/interactivity": "^5.7.0",
-		"@wordpress/prettier-config": "^3.15.0",
-		"prettier": "npm:wp-prettier@^3.0.3"
+		"@wordpress/interactivity": "^5.7.0"
 	}
 }
