Fix relative paths in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,10 @@
 		"noEmit": true,
 		"paths": {
 			"@html-api-debugger/print-html-tree": [
-				"html-api-debugger/print-html-tree.js"
+				"./html-api-debugger/print-html-tree.js"
 			],
 			"@html-api-debugger/replace-invisible-chars": [
-				"html-api-debugger/replace-invisible-chars.js"
+				"./html-api-debugger/replace-invisible-chars.js"
 			]
 		}
 	},
