--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
 	"$schema": "https://json.schemastore.org/package.json",
-	"name": "test-dewp",
+	"name": "html-api-debugger",
 	"version": "1.0.0",
 	"description": "",
+	"private": true,
 	"scripts": {
 		"build": "zip -r html-api-debugger html-api-debugger"
 	},
 	"author": "sirreal",
 	"license": "GPL-2.0",
 	"devDependencies": {
-		"@biomejs/biome": "1.7.3",
+		"@biomejs/biome": "1.8.3",
 		"@tsconfig/strictest": "^2.0.5",
-		"@typescript/lib-dom": "npm:@types/web@^0.0.147",
-		"@wordpress/api-fetch": "^6.55.0",
-		"@wordpress/interactivity": "^5.7.0"
+		"@typescript/lib-dom": "npm:@types/web@^0.0.153",
+		"@wordpress/interactivity": "^6.4.0"
 	}
 }
