--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@biomejs/biome": "1.8.3",
 		"@tsconfig/strictest": "^2.0.5",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.153",
-		"@wordpress/interactivity": "^6.4.0"
+		"@wordpress/interactivity": "^6.4.0",
+		"typescript": "^5.5.4"
 	}
 }
