--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.7.3/schema.json",
+	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
 	"organizeImports": {
 		"enabled": true
 	},
@@ -19,6 +19,6 @@
 	},
 	"formatter": {},
 	"files": {
-		"ignore": ["vendor", "plugin-repo"]
+		"ignore": ["vendor", "plugin-repo", "wordpress"]
 	}
 }
