--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"author": "sirreal",
 	"license": "GPL-2.0",
 	"devDependencies": {
-		"@biomejs/biome": "1.6.4",
+		"@biomejs/biome": "^1.9.4",
 		"@tsconfig/strictest": "^2.0.5",
 		"@typescript/lib-dom": "npm:@types/web@^0.0.153",
 		"@wordpress/interactivity": "^6.10.0",
